Fixed text visibility issies in venues.html on max width 800px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -458,19 +458,19 @@ input,select{
 @media screen and (max-width:800px) {
     .first-text {
         height: 250px;
-        padding: 10px;
+        padding: 70px;
     }
 
     .second-text {
         height: 250px;
         margin-top: 3px;
-        padding: 10px;
+        padding: 70px;
     }
 
     .third-text {
         height: 250px;
         margin-top: 3px;
-        padding-top: 10px;
+        padding-top: 70px;
     }
 
     .mobile {
